Add CSS styles to index.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
        }
        
     </style>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body style="background-color: mediumturquoise;">
 <header>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            
+    </nav>
     <h1 style="color: chocolate;">Welcome to CSS Basics</h1>
     </header>
     <main>
