updated style.css with new scheme

--- a/about.html
+++ b/about.html
@@ -24,11 +24,11 @@
         </section>
         <section>
             <h2>Advantages of CSS</h2>
-            <p>1. Improved Website Speed: By separating content from design, CSS reduces the amount of code on each page, leading to faster load times.</p>
-            <p>2. Consistent Design: CSS allows for a uniform look across multiple pages, making it easier to maintain and update the design.</p>
-            <p>3. Enhanced Accessibility: CSS can improve accessibility for users with disabilities by allowing for better control over layout and presentation.</p>
-            <p>4. Easier Maintenance: Changes can be made in one CSS file that will affect the entire website, simplifying updates and maintenance.</p>
-            <p>5. Greater Flexibility: CSS provides more options for layout and design, enabling more creative and complex designs.</p>
+            <p class="section text">1. Improved Website Speed: By separating content from design, CSS reduces the amount of code on each page, leading to faster load times.</p>
+            <p class="section text">2. Consistent Design: CSS allows for a uniform look across multiple pages, making it easier to maintain and update the design.</p>
+            <p class="section text">3. Enhanced Accessibility: CSS can improve accessibility for users with disabilities by allowing for better control over layout and presentation.</p>
+            <p class="section text">4. Easier Maintenance: Changes can be made in one CSS file that will affect the entire website, simplifying updates and maintenance.</p>
+            <p class="section text">5. Greater Flexibility: CSS provides more options for layout and design, enabling more creative and complex designs.</p>
     </main>
 </body>
 </html>
