--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <h1 style="color: chocolate;">Welcome to CSS Basics</h1>
     </header>
-    <main>
+    <main id="main-content">
         <section>
             <h2>what is it</h2>
             <p>CSS is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
